--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,3 +6,236 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+
+<div class="panel panel-info panel-prod">
+
+    <div class="panel-heading panel-heading-prod"><i class="fa fa-spinner fa-spin"></i> Sản phẩm APPLE</div>
+    <img src="~/images/1711701907283-1200x193_Banner-Hot-Section-Homepage-Desktop.webp" alt="">
+    <div class="panel-body">
+        <div class="row">
+            <div class="col-md-3">
+                <div class="thumbnail">
+                    <img src="images/iphone-15-pro-max-blue-titanium-pure-back-iphone-15-pro-max-blue-titanium-pure-front-2up-screen-usen.webp" class="img-rounded" alt="Iphone 15 prm 128gb">
+                    <div class="caption">
+                        <h4>Iphone 15 prm 128gb</h4>
+                        <p>Giá: 32.000.000 vnd</p>
+                        <p><a href="#" class="btn btn-info" role="button"><i class="fa fa-shopping-cart"></i> Mua ngay</a></p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-3">
+                <div class="thumbnail">
+                    <img src="images/iphone-15-pro-natural-titanium-pure-back-iphone-15-pro-natural-titanium-pure-front-2up-screen-usen.webp" class="img-rounded" alt="Iphone 15 pro 128gb">
+                    <div class="caption">
+                        <h4>Iphone 15 pro 128gb</h4>
+                        <p>Giá: 25.000.000 vnd</p>
+                        <p><a href="#" class="btn btn-info" role="button"><i class="fa fa-shopping-cart"></i> Mua ngay</a></p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-3">
+                <div class="thumbnail">
+                    <img src="images/iphone-15-plus-yellow-pure-back-iphone-15-plus-yellow-pure-front-2up-screen-usen.webp" class="img-rounded" alt="Iphone 15 plus 128gb">
+                    <div class="caption">
+                        <h4>Iphone 15 prm 128gb</h4>
+                        <p>Giá: 22.000.000  VNĐ</p>
+                        <p><a href="#" class="btn btn-info" role="button"><i class="fa fa-shopping-cart"></i> Mua ngay</a></p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-3">
+                <div class="thumbnail">
+                    <img src="images/apple-iphone-12-mini-5.webp" class="img-rounded" alt="Điện thoại iPhone 12 (64GB)">
+                    <div class="caption">
+                        <h4>Điện thoại iPhone 12 (64GB)</h4>
+                        <p>Giá: 15.000.000  VNĐ</p>
+                        <p><a href="#" class="btn btn-info" role="button"><i class="fa fa-shopping-cart"></i> Mua ngay</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="panel-footer">
+        <p class="more-prod"><a href="#" target="_blank">Xem thêm sản phẩm...</a></p>
+    </div>
+</div>
+
+<div class="panel panel-danger panel-prod">
+    <div class="panel-heading panel-heading-prod"><i class="fa fa-spinner fa-spin"></i> Sản phẩm IPad</div>
+    <div class="panel-body">
+        <div class="row">
+            <div class="col-md-3">
+                <div class="thumbnail">
+                    <img src="images/apple-ipad-air-10-9-2020-2.webp" class="img-rounded" alt="Máy tính bảng iPad Air 4 10.9" 4G (64GB)">
+                    <div class="caption">
+                        <h4>Máy tính bảng iPad Air 4 10.9" 4G (64GB)</h4>
+                        <p>Giá: 16.000.000 VNĐ</p>
+                        <p><a href="#" class="btn btn-info" role="button"><i class="fa fa-shopping-cart"></i> Mua ngay</a></p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-3">
+                <div class="thumbnail">
+                    <img src="images/image-removebg-preview_638022082728321716.webp" alt="Máy tính bảng iPad Pro M2 11" Wi-Fi (128GB)">
+                    <div class="caption">
+                        <h4>Máy tính bảng iPad Pro M2 11" Wi-Fi (128GB)</h4>
+                        <p>Giá: 23.000.000 VNĐ</p>
+                        <p><a href="#" class="btn btn-info" role="button"><i class="fa fa-shopping-cart"></i> Mua ngay</a></p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-3">
+                <div class="thumbnail">
+                    <img src="images/2019.webp" class="img-rounded" alt="Máy tính bảng iPad Gen 9 10.2" 4G (64GB)">
+                    <div class="caption">
+                        <h4>Máy tính bảng iPad Gen 9 10.2" 4G (64GB)</h4>
+                        <p>Giá: 9.999..000 VNĐ</p>
+                        <p><a href="#" class="btn btn-info" role="button"><i class="fa fa-shopping-cart"></i> Mua ngay</a></p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-3">
+                <div class="thumbnail">
+                    <img src="images/iphone-15-plus-yellow-pure-back-iphone-15-plus-yellow-pure-front-2up-screen-usen.webp" class="img-rounded" alt="Máy tính bảng iPad Gen 10 10.9" Wi-Fi (256GB)">
+                    <div class="caption">
+                        <h4>Iphone 15 prm 128gb</h4>
+                        <p>Giá: 22.000.000  VNĐ</p>
+                        <p><a href="#" class="btn btn-info" role="button"><i class="fa fa-shopping-cart"></i> Mua ngay</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="panel-footer">
+        <p class="more-prod"><a href="#" target="_blank">Xem thêm sản phẩm...</a></p>
+
+    </div>
+    <div class="youtube">
+        <iframe width="1120" height="630" src="https://www.youtube.com/embed/xqyUdNxWazA?si=QEl2b6tslqSHyo8j" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
+</div>
+            </div>
+
+<div class="" col-md-3" style="margin-right">
+    <div class="panel panel-primary panel-post">
+        <div class="panel-heading panel-heading-prod"><i class="fa fa-comments-o"></i> Chăm sóc khách hàng bảo hành đổi trả</div>
+        <div class="panel-body panel-body-post">
+            <h4><a href="#">Chăm sóc khách hàng bảo hành đổi trả</h4></a>
+            <p>Thu cũ đổi mới</p>
+
+            <h4><a href="#">Cách kiểm tra thiết bị thông tin bảo hành</h4></a>
+            <p>Mya của bạn có phải apple chính hãng không</p>
+        </div>
+        <div class="panel-footer">
+            <p class="more-prod"><a href="#" target="_blank">Xem thêm bài viết...</a></p>
+        </div>
+    </div>
+
+    <div class="panel panel-success panel-post">
+        <div class="panel-heading panel-heading-prod"><i class="fa fa-paper-plane"></i> Quảng cáo</div>
+        <div class="panel-body panel-body-post">
+            <img src="images/products/3152_chic_cham_dau_tam_cam_petcity.png" class="img-rounded img-adv" alt="Quảng cáo" />
+            <marquee>Luôn sử dụng theo dõi thiết bị khi máy quá nóng pin tụt quá nhanh</marquee>
+        </div>
+    </div>
+
+    <div class="youtube">
+        <iframe width="280" height="300" src="https://www.youtube.com/embed/TX9qSaGXFyg?si=dxhx4j28atRgBfJi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
+
+    <div class="map">
+        <iframe @* width="1120" height="630" *@ src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3918.4206985418705!2d106.78253487570396!3d10.855572157727538!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3175276e7ea103df%3A0xb6cf10bb7d719327!2zSFVURUNIIC0gxJDhuqFpIGjhu41jIEPDtG5nIG5naOG7hyBUUC5IQ00gKFRodSBEdWMgQ2FtcHVzKQ!5e0!3m2!1svi!2s!4v1710172843840!5m2!1svi!2s" width="110%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+
+</div>
+        </div>
+
+<div class="footer">
+    <div class="container container-footer">
+        <div class="col-md-8">
+            <h4>Website chuyên Táo APPLE</h4>
+            <p>Địa chỉ: HUTECH Thuduc Campus - Khu CNC, Phường Hiệp Phú, Tp. Thử Đức, Tp. Hồ chí Minh</p>
+            <p>SĐT: <a class="info" href="tel:xxx">xxx</a> (Ten xxx)</p>
+            <p>Email: <a class="info" href="mailto: 12345@gmail.com">12345@gmail.com</a></p>
+        </div>
+
+        <div class="col-md-4">
+            <img src="images/banner-1.png" alt="logo" />
+            <p></p>
+            <p>Số lượng truy cập hiện tại: 100</p>
+        </div>
+    </div>
+</div>
+
+<div id="modalSignup" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Đăng ký</h4>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="form-group">
+                        <label for="username">Username:</label>
+                        <input type="text" class="form-control" id="username" placeholder="Nhập username" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="fullname">Họ tên:</label>
+                        <input type="text" class="form-control" id="fullname" placeholder="Nhập họ tên" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="address">Địa chỉ:</label>
+                        <input type="text" class="form-control" id="address" placeholder="Nhập địa chỉ">
+                    </div>
+                    <div class="form-group">
+                        <label for="phone">Số điện thoại:</label>
+                        <input type="tel" class="form-control" id="phone" placeholder="Nhập số điện thoại">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email:</label>
+                        <input type="email" class="form-control" id="email" placeholder="Nhập email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Mật khẩu:</label>
+                        <input type="password" class="form-control" id="password" placeholder="Nhập mật khẩu" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="confirmPassword">Nhập lại mật khẩu:</label>
+                        <input type="password" class="form-control" id="confirmPassword" placeholder="Nhập lại mật khẩu" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Đăng ký</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="modalLogin" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Đăng nhập</h4>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="form-group">
+                        <label for="username">Username:</label>
+                        <input type="text" class="form-control" id="username" placeholder="Nhập username" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Mật khẩu:</label>
+                        <input type="password" class="form-control" id="password" placeholder="Nhập mật khẩu" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Đăng nhập</button>
+                </form>
+            </div>
+        </div>
