lam themm sao cho san pham can lai container

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -9,9 +9,18 @@
 
 <img src="~/images/1711701907283-1200x193_Banner-Hot-Section-Homepage-Desktop.webp" alt="">
 <div class="panel panel-info panel-prod">
+    <style>
+        .star-rating {
+            color: #ffcc00; /* Change the color of the stars */
+        }
 
-    <div class="panel-heading panel-heading-prod"><i class="fa fa-spinner fa-spin"></i> Sản phẩm APPLE</div>
-    
+        /* Style the checked stars */
+        .checked {
+            color: orange;
+        }
+    </style>
+    <div class="panel-heading panel-heading-prod">@* <i class="fa fa-spinner fa-spin"> *@</i> Sản phẩm APPLE</div>
+
     <div class="panel-body">
         <div class="row">
             <div class="col-md-3">
@@ -20,6 +29,14 @@
                     <div class="caption">
                         <h4>Iphone 15 prm 128gb</h4>
                         <p>Giá: 32.000.000 vnd</p>
+                        <div class="star-rating"> 
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star"></span>
+                        </div>
+                        <!-- End Star Rating -->
                         <p><a href="#" class="btn btn-info" role="button"><i class="fa fa-shopping-cart"></i> Mua ngay</a></p>
                     </div>
                 </div>
@@ -31,6 +48,13 @@
                     <div class="caption">
                         <h4>Iphone 15 pro 128gb</h4>
                         <p>Giá: 25.000.000 vnd</p>
+                        <div class="star-rating"> 
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star"></span>
+                        </div>
                         <p><a href="#" class="btn btn-info" role="button"><i class="fa fa-shopping-cart"></i> Mua ngay</a></p>
                     </div>
                 </div>
@@ -42,6 +66,13 @@
                     <div class="caption">
                         <h4>Iphone 15 prm 128gb</h4>
                         <p>Giá: 22.000.000  VNĐ</p>
+                        <div class="star-rating"> 
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star"></span>
+                        </div>
                         <p><a href="#" class="btn btn-info" role="button"><i class="fa fa-shopping-cart"></i> Mua ngay</a></p>
                     </div>
                 </div>
@@ -53,6 +84,13 @@
                     <div class="caption">
                         <h4>Điện thoại iPhone 12 (64GB)</h4>
                         <p>Giá: 15.000.000  VNĐ</p>
+                        <div class="star-rating"> 
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star"></span>
+                        </div>
                         <p><a href="#" class="btn btn-info" role="button"><i class="fa fa-shopping-cart"></i> Mua ngay</a></p>
                     </div>
                 </div>
@@ -65,15 +103,37 @@
 </div>
 
 <div class="panel panel-danger panel-prod">
-    <div class="panel-heading panel-heading-prod"><i class="fa fa-spinner fa-spin"></i> Sản phẩm IPad</div>
+    <div class="panel-heading panel-heading-prod"></i> Sản phẩm IPad
+        <div class="btn-group pull-right">
+            <button type="button" class="btn btn-secondary">Samsung</button>
+            <button type="button" class="btn btn-secondary">Oppo</button>
+            <button type="button" class="btn btn-secondary">Xiaomi</button>
+        </div>
+        </div>
+    
     <div class="panel-body">
         <div class="row">
+            <div>
+                <div class="col-md-6">
+                    <img width="550" height="200" src="/images//xiaomi14-web1.jpg" alt="Alternate Text" />
+                </div>
+                <div class="col-md-6">
+                    <img width="550" height="200" src="/images//xiaomi14-web1.jpg" alt="Alternate Text" />
+                </div>
+            </div>
             <div class="col-md-3">
                 <div class="thumbnail">
                     <img src="images/apple-ipad-air-10-9-2020-2.webp" class="img-rounded" alt="Máy tính bảng iPad Air 4 10.9" 4G (64GB)">
                     <div class="caption">
                         <h4>Máy tính bảng iPad Air 4 10.9" 4G (64GB)</h4>
                         <p>Giá: 16.000.000 VNĐ</p>
+                        <div class="star-rating">
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star"></span>
+                        </div>
                         <p><a href="#" class="btn btn-info" role="button"><i class="fa fa-shopping-cart"></i> Mua ngay</a></p>
                     </div>
                 </div>
@@ -85,6 +145,13 @@
                     <div class="caption">
                         <h4>Máy tính bảng iPad Pro M2 11" Wi-Fi (128GB)</h4>
                         <p>Giá: 23.000.000 VNĐ</p>
+                        <div class="star-rating">
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star"></span>
+                        </div>
                         <p><a href="#" class="btn btn-info" role="button"><i class="fa fa-shopping-cart"></i> Mua ngay</a></p>
                     </div>
                 </div>
@@ -96,6 +163,13 @@
                     <div class="caption">
                         <h4>Máy tính bảng iPad Gen 9 10.2" 4G (64GB)</h4>
                         <p>Giá: 9.999..000 VNĐ</p>
+                        <div class="star-rating">
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star"></span>
+                        </div>
                         <p><a href="#" class="btn btn-info" role="button"><i class="fa fa-shopping-cart"></i> Mua ngay</a></p>
                     </div>
                 </div>
@@ -107,6 +181,13 @@
                     <div class="caption">
                         <h4>Iphone 15 prm 128gb</h4>
                         <p>Giá: 22.000.000  VNĐ</p>
+                        <div class="star-rating">
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star"></span>
+                        </div>
                         <p><a href="#" class="btn btn-info" role="button"><i class="fa fa-shopping-cart"></i> Mua ngay</a></p>
                     </div>
                 </div>
@@ -120,39 +201,16 @@
     <div class="youtube">
         <iframe width="1120" height="630" src="https://www.youtube.com/embed/xqyUdNxWazA?si=QEl2b6tslqSHyo8j" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
+    <img width="1120" height="150" src="/images/1701308623643-1200x106_Footer-Banner.webp" alt="">
+    <div class="map">
+        <iframe width="1120" height="400" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3918.4206985418705!2d106.78253487570396!3d10.855572157727538!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3175276e7ea103df%3A0xb6cf10bb7d719327!2zSFVURUNIIC0gxJDhuqFpIGjhu41jIEPDtG5nIG5naOG7hyBUUC5IQ00gKFRodSBEdWMgQ2FtcHVzKQ!5e0!3m2!1svi!2s!4v1710172843840!5m2!1svi!2s" width="110%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+
 </div>
             </div>
 
-<div class="" col-md-3" style="margin-right">
-    <div class="panel panel-primary panel-post">
-        <div class="panel-heading panel-heading-prod"><i class="fa fa-comments-o"></i> Chăm sóc khách hàng bảo hành đổi trả</div>
-        <div class="panel-body panel-body-post">
-            <h4><a href="#">Chăm sóc khách hàng bảo hành đổi trả</h4></a>
-            <p>Thu cũ đổi mới</p>
 
-            <h4><a href="#">Cách kiểm tra thiết bị thông tin bảo hành</h4></a>
-            <p>Mya của bạn có phải apple chính hãng không</p>
-        </div>
-        <div class="panel-footer">
-            <p class="more-prod"><a href="#" target="_blank">Xem thêm bài viết...</a></p>
-        </div>
-    </div>
 
-    <div class="panel panel-success panel-post">
-        <div class="panel-heading panel-heading-prod"><i class="fa fa-paper-plane"></i> Quảng cáo</div>
-        <div class="panel-body panel-body-post">
-            <img src="images/products/3152_chic_cham_dau_tam_cam_petcity.png" class="img-rounded img-adv" alt="Quảng cáo" />
-            <marquee>Luôn sử dụng theo dõi thiết bị khi máy quá nóng pin tụt quá nhanh</marquee>
-        </div>
-    </div>
-
-    <div class="youtube">
-        <iframe width="280" height="300" src="https://www.youtube.com/embed/TX9qSaGXFyg?si=dxhx4j28atRgBfJi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </div>
-
-    <div class="map">
-        <iframe @* width="1120" height="630" *@ src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3918.4206985418705!2d106.78253487570396!3d10.855572157727538!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3175276e7ea103df%3A0xb6cf10bb7d719327!2zSFVURUNIIC0gxJDhuqFpIGjhu41jIEPDtG5nIG5naOG7hyBUUC5IQ00gKFRodSBEdWMgQ2FtcHVzKQ!5e0!3m2!1svi!2s!4v1710172843840!5m2!1svi!2s" width="110%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
 
 </div>
         </div>
@@ -167,7 +225,7 @@
         </div>
 
         <div class="col-md-4">
-            <img src="images/banner-1.png" alt="logo" />
+            <img width="300px" height="50px"  src="~/images/logo.svg" alt="logo" />
             <p></p>
             <p>Số lượng truy cập hiện tại: 100</p>
         </div>
