--- a/Views/Home/_MenuPartial.cshtml
+++ b/Views/Home/_MenuPartial.cshtml
@@ -1,9 +1,9 @@
 ﻿@model XayDungWebAphone.ViewModels.HomeViewModel
-<div class="container" style="background-color: #FF6600">
-    <div class="col-md-4">
+<div class="container" style="background-color: #FFd600">
+    <div class="col-md-4 text-left">
         <img width="300px" height="50px" src="~/images/logo.svg" alt="">
     </div>
-    <div class="col-md-4">
+    <div class="col-md-4 text-center">
         <!-- Load icon library -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 
@@ -13,7 +13,7 @@
             <button type="submit"><i class="fa fa-search"></i></button>
         </form>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-4 text-right">
         <li>
             <a href="#" data-toggle="modal" data-target="#modalSignup">
                 <span class="glyphicon glyphicon-user"></span> Đăng ký
