--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
 <body>
 
 
-    <header style="background-color: #FF6600">
+    <header style="background-color: #FFD600">
 
         <head>
 
@@ -57,7 +57,7 @@
         <div class="container">
             @* Thanh cong cu nav *@
             
-            @await Html.PartialAsync("_MenuPartial")
+             @await Html.PartialAsync("_MenuPartial") 
 
         </div>
 
@@ -65,77 +65,11 @@
 
 
     <div class="container">
-
-        <div class="row">
-            @* bang quang cao dien thoai ngoai container *@
-            @* <div class="col-md-1">
-            <img src="~/images/quangcao1webp.webp" alt="">
-            </div> *@
-            @* @await Html.PartialAsync("_Category") *@
-            <div class="col-md-2">
-
-                <ul class="nav nav-pills nav-stacked">
-                    <li class="active"><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Phone" asp-action="Index">Điện thoại</a></li>
-                    <li><a asp-area="" asp-controller="Clock" asp-action="Index">Đồng hồ</a></li>
-                    <li><a asp-area="" asp-controller="Earphone" asp-action="Index">IPad</a></li>
-                    <li><a asp-area="" asp-controller="MacBook" asp-action="Index">Macbook</a></li>
-                    <li><a asp-area="" asp-controller="Accessory" asp-action="Index">Phụ kiện</a></li>
-                </ul>
-            </div>
-
-            <div class="col-md-8">
-                <ol class="carousel-indicators">
-                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                    <li data-target="#myCarousel" data-slide-to="1"></li>
-                    <li data-target="#myCarousel" data-slide-to="2"></li>
-                    <li data-target="#myCarousel" data-slide-to="3"></li>
-                </ol>
-
-                <div class="carousel-inner w-100">
-                    <div class="item active">
-                        <img src="images/1200x375.jpg" alt="">
-                    </div>
-                    <div class="item">
-                        <img src="images/xiaomi14-web1.jpg" alt="">
-                    </div>
-                    <div class="item">
-                        <img src="images/sliders/slider-3.png" alt="">
-                    </div>
-                    <div class="item">
-                        <img src="images/sliders/slider-4.png" alt="">
-                    </div>
-                </div>
-
-                <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-                    <span class="glyphicon glyphicon-chevron-left"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="right carousel-control" href="#myCarousel" data-slide="next">
-                    <span class="glyphicon glyphicon-chevron-right"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
-
-
-
-
-            <div class="col-md-2">
-
-                <ul class="nav nav-pills nav-stacked" role="tablist">
-                    <li class="active"><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a href="#">Sữa chữa</a></li>
-                    <li><a href="#">Bảo hành</a></li>
-                    <li><a href="#">Trả góp</a></li>
-
-                </ul>
-
-            </div>
-
-        </div>
+        @* particial thanh product *@
+        @await Html.PartialAsync("_CategoryPartial")
+        
         @RenderBody()
     </div>
-
 
 
     <div class="content">
