--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -94,7 +94,7 @@
             <div class="col-md-2">
 
                 <ul class="nav nav-pills nav-stacked">
-                    <li class="active"><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+                    <li><a href="../Views/Home/Index.cshtml" class="btn" role="button">Home</a></li>
                     <li><a asp-area="" asp-controller="Phone" asp-action="Index">Điện thoại</a></li>
                     <li><a asp-area="" asp-controller="Clock" asp-action="Index">Đồng hồ</a></li>
                     <li><a asp-area="" asp-controller="Earphone" asp-action="Index">IPad</a></li>
